--- a/client/src/Components/Header/Header.css
+++ b/client/src/Components/Header/Header.css
@@ -27,3 +27,10 @@
     font-size: 20px;
   }
 }
+
+@media only screen and (max-width: 400px) {
+  .headingTag {
+    font-size: 15px;
+    padding-right: 7%;
+  }
+}
