--- a/client/src/Components/Header/Header.css
+++ b/client/src/Components/Header/Header.css
@@ -5,14 +5,13 @@
   padding-bottom: 1%;
   padding-top: 1%;
   box-shadow: 1px 1px 1px 1px black;
+  align-items: center;
 }
 
 .logo {
   height: 90px;
   border-radius: 5px;
   box-shadow: 1px 1px 1px 1px black;
-
-  /* padding-left: 5%; */
 }
 
 .headingTag {
@@ -25,6 +24,10 @@
 @media only screen and (max-width: 700px) {
   .headingTag {
     font-size: 20px;
+  }
+
+  .header {
+    padding-left: 15px;
   }
 }
 
