--- a/client/src/Components/OtherTime/OtherTime.css
+++ b/client/src/Components/OtherTime/OtherTime.css
@@ -14,3 +14,10 @@
   max-width: 400px;
   min-width: 400px;
 }
+
+@media only screen and (max-width: 600px) {
+  .otherTimes {
+    max-width: 300px;
+    min-width: 300px;
+  }
+}
